Closes #69 Configuration Parser Implementation